# blinkr-backend

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/core/: admin.py  mixins.py  models.py  serializers.py  tasks.py  tests.py
apps/core/migrations/: 0001_initial.py
apps/core/urls/: auth.py  v1.py
apps/core/utils/: slugs.py  user_agent.py
apps/core/views/: auth.py  redirect.py  v1.py
blinkr/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
blinkr/settings/: base.py
docker/: Dockerfile
