[project]
name = "blinkr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.6",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
