[project]
name = "blinkr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.6",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
